--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -123,4 +123,4 @@ button span {
 .content a {
   color: #cc3852;
   margin-right: 10px;
-}
+} */
