--- a/ghi/src/Styling/nav.css
+++ b/ghi/src/Styling/nav.css
@@ -1,4 +1,4 @@
-.navbar-container {
+/* .navbar-container {
   background: linear-gradient(
     to left,
     #48c1b7 0%,
@@ -23,4 +23,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
