--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -7,6 +7,56 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-image: url("./backg2.png");
+  background-position: center center;
+  z-index: -100;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url("./frame2.png");
+  background-position: center center;
+  background-repeat: repeat;
+  animation: float-bg 3s linear infinite;
+  opacity: .5;
+  z-index: -1;
+}
+@keyframes float-bg {
+  0% {
+      transform: translate(100%, 0%);
+  }
+  50% {
+      transform: translate(0%, 100%);
+  }
+  100% {
+      transform: translate(-100%, 0%);
+  }
+
+}
+
+/* html {
+  background: url("backg.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
