--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -8,11 +8,17 @@ h1 {
   text-align: center;
 }
 
+p1 {
+margin: 200px, 200px;
+font-weight: bold;
+text-align: center;
+}
+
 .blackfooter {
   background: black;
   height: 20%;
   display: flex;
   justify-content: bottom;
-  z-index: 2000;
+  z-index: 1;
   opacity: .80;
 }
