--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -5,48 +5,71 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-
-body::before {
   content: "";
   position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, .3)), url("./backg.png");
+  background-size: 85%, 60%;
+  background-repeat: no-repeat, repeat;
+  background-position: center center, center center;
+  background-attachment: fixed, fixed;
+  z-index: -100;
+}
+
+h1 {
+  font-weight: bold;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+body::after {
+  content: "";
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background-size: cover;
-  background-image: url("./backg2.png");
-  background-position: center center;
-  z-index: -100;
-}
-
-body::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-image: url("./frame2.png");
-  background-position: center center;
+  display: flex;
+  background-size: 1000px;
+  background-image: url("./frame3.png");
   background-repeat: repeat;
-  animation: float-bg 3s linear infinite;
+  animation: scroll 600s linear infinite;
   opacity: .5;
   z-index: -1;
 }
-@keyframes float-bg {
+@keyframes scroll {
   0% {
-      transform: translate(100%, 0%);
+    background-position:-3000px 0px;
+}
+  12.5% {
+      background-position:0px -3000px;
   }
+  25% {
+    background-position:-3000px 0px;
+}
+  37.5% {
+    background-position:0px -3000px;
+}
   50% {
-      transform: translate(0%, 100%);
-  }
+    background-position:-3000px 0px;
+}
+  62.5% {
+    background-position:0px -3000px;
+}
+  75% {
+    background-position:-3000px 0px;
+}
+  87.5% {
+    background-position:0px -3000px;
+}
   100% {
-      transform: translate(-100%, 0%);
-  }
-
+    background-position:-3000px 0px;
+}
 }
 
 /* html {
