--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -35,55 +35,62 @@ body::after {
   width: 100%;
   height: 100vh;
   display: flex;
-  background-size: 1000px;
-  background-image: url("./frame3.png");
+  background-size: 125px;
+  background-image: url("./frame2.png");
   background-repeat: repeat;
-  animation: scroll 600s linear infinite;
+  animation: scroll 660s linear infinite;
   opacity: .5;
   z-index: -1;
 }
 @keyframes scroll {
   0% {
-    background-position:-3000px 0px;
-}
+    background-position: -3000px 3000px;
+  }
   12.5% {
-      background-position:0px -3000px;
+    background-position: 0px -3000px;
   }
   25% {
-    background-position:-3000px 0px;
-}
+    background-position: -3000px 0px;
+  }
   37.5% {
-    background-position:0px -3000px;
-}
+    background-position: 0px 3000px;
+  }
   50% {
-    background-position:-3000px 0px;
-}
+    background-position: -3000px 3000px;
+  }
   62.5% {
-    background-position:0px -3000px;
-}
+    background-position: 0px -3000px;
+  }
   75% {
-    background-position:-3000px 0px;
-}
+    background-position: -3000px 0px;
+  }
   87.5% {
-    background-position:0px -3000px;
-}
+    background-position: 0px 3000px;
+  }
   100% {
-    background-position:-3000px 0px;
+    background-position: -3000px 3000px;
+  }
 }
-}
-
-/* html {
-  background: url("backg.png") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bold {
+  font-weight: 500;
+}
+
+/* .rainbow-button {
+  background-image: url("./holo.png");
+  background-size: 150%;
+  border-radius:5px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+} */
+
+
 /*
 .navbar {
   background: linear-gradient(
