--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -11,12 +11,12 @@ body {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, .3)), url("./backg.png");
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("./backg.png");
   background-size: 85%, 60%;
   background-repeat: no-repeat, repeat;
   background-position: center center, center center;
   background-attachment: fixed, fixed;
-  z-index: -100;
+  z-index: -1,-100;
 }
 
 h1 {
@@ -38,9 +38,9 @@ body::after {
   background-size: 125px;
   background-image: url("./frame2.png");
   background-repeat: repeat;
-  animation: scroll 660s linear infinite;
+  animation: scroll 540s linear infinite;
   opacity: .5;
-  z-index: -1;
+  z-index: -20;
 }
 @keyframes scroll {
   0% {
