--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -47,3 +47,23 @@ text-align: center;
   max-width: 80%;
   margin: auto;
 }
+
+.navbar-brand {
+  font-size: 23px;
+  font-weight: 500;
+}
+
+.nav-item {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.dropdown-item {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.semi-bold-20 {
+  font-size: 20px;
+  font-weight: 500;
+}
