--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -67,3 +67,17 @@ text-align: center;
   font-size: 20px;
   font-weight: 500;
 }
+
+.left-div {
+  width: 50%;
+  float: left;
+}
+
+.right-div {
+  margin-left: 50%;
+}
+
+.centered-card {
+  width: 50%;
+  margin: 10% 10% 10% 25%;
+}
