--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -77,7 +77,19 @@ text-align: center;
   margin-left: 50%;
 }
 
-.centered-card {
-  width: 50%;
-  margin: 10% 10% 10% 25%;
+.left-card {
+  width: 40%;
+  size: 510px;
+  margin: 0% 6% 1% 5%;
+  float: left;
+}
+
+.left2 {
+  text-align: left;
+  margin: 3%;
+}
+
+.centered-h1 {
+  text-align: center;
+  margin-bottom: 3%;
 }
