--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -111,3 +111,23 @@ text-align: center;
 .opacity-100 {
   opacity: 100%;
 }
+
+.scrollable {
+  margin:2% 0%;
+  padding:4px;
+  width: 100%;
+  height: 40vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  text-align:justify;
+}
+
+.maindeck {
+  margin: 2% 0%;
+  background-image: linear-gradient(to right, rgba(151, 9, 9, 0.466), rgba(255, 255, 255, 0.082));
+}
+
+.pluckdeck {
+  margin: 2% 0%;
+  background-image: linear-gradient(to right, rgba(72, 46, 145, 0.466), rgba(255, 255, 255, 0.082));
+}
