--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -113,8 +113,7 @@ text-align: center;
 }
 
 .scrollable {
-  margin:2% 0%;
-  padding:4px;
+  margin:0% 0% 0% 0%;
   width: 100%;
   height: 40vh;
   overflow-x: hidden;
