--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -113,7 +113,7 @@ text-align: center;
 }
 
 .scrollable {
-  margin:0% 0% 0% 0%;
+  margin: 0% 0% 0% 0%;
   width: 100%;
   height: 40vh;
   overflow-x: hidden;
@@ -129,4 +129,8 @@ text-align: center;
 .pluckdeck {
   margin: 2% 0%;
   /* background-image: linear-gradient(to right, rgba(72, 46, 145, 0.6), rgba(255, 255, 255, 0.082)); */
+}
+
+.selected {
+  background: rgb(255, 0, 0);
 }
