--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -406,3 +406,25 @@ text-align: center;
   border-radius: 4.5%;
   overflow: hidden;
 }
+
+.img-modal {
+  width: 338px;
+  border-radius: 17px;
+  overflow: hidden;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+}
+
+.modal-card {
+  width: 338px;
+  border-radius: 17px;
+  overflow: hidden;
+}
+
+.hidden2 {
+  display: none;
+}
