Minor CSS change; centered card and deck pages

--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -398,7 +398,7 @@ text-align: center;
   display: flex;
   flex-wrap: wrap;
   margin: auto;
-  justify-content: start;
+  justify-content: center;
 }
 
 .card-list-card {
