--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -485,3 +485,80 @@ text-align: center;
   width: 300px;
   overflow: hidden;
 }
+
+.card-list3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem; /* Add any gap you want between the cards */
+}
+
+.bigStaunch2 {
+  color: aliceblue;
+  background: url("./placeh3.png"),rgba(0, 158, 92, 0.705);
+  background-blend-mode: multiply;
+  background-size: 70%;
+  border: 7px solid rgb(3, 131, 78);
+  border-radius: 7px;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  width: 100%;
+  height: 100%;
+}
+
+.bigPower2 {
+  color: aliceblue;
+  background: url("./placeh3.png"),rgb(255, 73, 73);
+  background-blend-mode: multiply;
+  background-size: 70%;
+  border: 7px solid rgb(255, 31, 31);
+  border-radius: 7px;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  width: 100%;
+  height: 100%;
+}
+
+.bigUnity2 {
+  color: aliceblue;
+  background: url("./placeh3.png"),rgba(50, 132, 255, 0.705);
+  background-blend-mode: multiply;
+  background-size: 70%;
+  border: 7px solid rgb(28, 40, 78);
+  border-radius: 7px;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  width: 100%;
+  height: 100%;
+}
+
+.bigCanny2 {
+  color: aliceblue;
+  background: url("./placeh3.png"),rgba(116, 43, 150, 0.705);
+  background-blend-mode: multiply;
+  background-size: 70%;
+  border: 7px solid rgb(68, 28, 78);
+  border-radius: 7px;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  width: 100%;
+  height: 100%;
+}
+
+.bigNoClass2 {
+  color: aliceblue;
+  background: url("./placeh5.png"),#4d475e49;
+  background-blend-mode: overlay;
+  background-size: 100%;
+  border: 7px solid #4D475E;
+  border-radius: 7px;
+  font-weight: 500;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+.nav-link {
+  text-decoration: none;
+}
