--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -562,3 +562,25 @@ text-align: center;
 .nav-link {
   text-decoration: none;
 }
+
+.deck-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem; /* Add any gap you want between the cards */
+}
+
+.maindeck3 {
+  margin: 2% 0%;
+  background-color: rgba(163, 26, 26, 0.315);
+  border: 2px solid rgb(173, 41, 41);
+  border-radius: 10px;
+  /* background-image: linear-gradient(to right, rgba(151, 9, 9, 0.6), rgba(255, 255, 255, 0.082)); */
+}
+
+.pluckdeck3 {
+  margin: 2% 0%;
+  background-color: rgba(26, 63, 163, 0.315);
+  border: 2px solid rgb(41, 50, 173);
+  border-radius: 10px;
+  /* background-image: linear-gradient(to right, rgba(72, 46, 145, 0.6), rgba(255, 255, 255, 0.082)); */
+}
