--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1,3 +1,96 @@
+body {
+  margin-bottom: 200px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("./backg.png");
+  background-size: 85%, 60%;
+  background-repeat: no-repeat, repeat;
+  background-position: center center, center center;
+  background-attachment: fixed, fixed;
+  z-index: -1,-100;
+}
+
+h1 {
+  font-weight: bold;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+body::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  background-size: 125px;
+  background-image: url("./frame2.png");
+  background-repeat: repeat;
+  animation: scroll 840s linear infinite;
+  opacity: .5;
+  z-index: -20;
+  margin-bottom: 200px;
+}
+@keyframes scroll {
+  0% {
+    background-position: -3000px 3000px;
+  }
+  12.5% {
+    background-position: 0px -3000px;
+  }
+  25% {
+    background-position: -3000px 0px;
+  }
+  37.5% {
+    background-position: 0px 3000px;
+  }
+  50% {
+    background-position: -3000px 3000px;
+  }
+  62.5% {
+    background-position: 0px -3000px;
+  }
+  75% {
+    background-position: -3000px 0px;
+  }
+  87.5% {
+    background-position: 0px 3000px;
+  }
+  100% {
+    background-position: -3000px 3000px;
+  }
+}
+
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+}
+
+.bold {
+  font-weight: 500;
+}
+
+.topbar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+}
+
 Card {
   padding:0px;
   height: auto;
@@ -344,6 +437,7 @@ text-align: center;
 }
 
 .builder-card2:hover {
+  position: relative;
   transform: scale(2.5);
   z-index: 2000;
   width: 140px;
@@ -485,6 +579,7 @@ text-align: center;
   justify-content: center;
   align-items: center;
   height: 100px;
+  position: relative;
 }
 
 .social-icon {
@@ -616,4 +711,26 @@ text-align: center;
   border: 2px solid rgb(41, 50, 173);
   border-radius: 10px;
   /* background-image: linear-gradient(to right, rgba(72, 46, 145, 0.6), rgba(255, 255, 255, 0.082)); */
+}
+
+.card-container {
+  position: relative;
+  display: inline-block;
+}
+
+.card-container:hover img {
+  display: inline-block;
+}
+
+.card-image {
+  position: absolute;
+  z-index: 200;
+  width: 338px;
+  margin: 2.5% 0px 0px 0%;
+  border-radius: 17px;
+  overflow: hidden;
+  top: 100%;
+  left: 100%;
+  display: none;
+  transform: translate(10%, -80%);
 }
