--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -189,6 +189,21 @@ text-align: center;
   margin-bottom: 3%;
 }
 
+.centered-h5 {
+  text-align: center;
+  font-weight: 750;
+  color: black;
+  margin-top: 4%;
+  margin-bottom: 0;
+}
+
+.centered-h5-2 {
+  text-align: center;
+  font-weight: 750;
+  color: black;
+  margin-top: 1%;
+}
+
 .label{
   text-align: left;
   margin: 15px 5px 0px 5px;
