--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -118,9 +118,9 @@ text-align: center;
 
 .blackfooter2 {
   background: black;
-  height: 40%;
+  height: 100%;
   z-index: 1;
-  opacity: .80;
+  opacity: .70;
 }
 
 .left-h1{
@@ -137,8 +137,7 @@ text-align: center;
   text-align: left;
   margin: 5px;
 }
-
-.left-top-card {
+5.left-top-card {
   text-align: left;
   margin: 15px 5px 15px 17px;
 }
@@ -553,10 +552,9 @@ text-align: center;
 }
 
 .card-list2 {
-  display: flex;
-  flex-wrap: wrap;
-  margin: auto;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem; /* Add any gap you want between the cards */
 }
 
 .card-list3 {
@@ -582,6 +580,13 @@ text-align: center;
   width: 100%;
   margin: 0px 3px 0px 3px;
   border-radius: 4.5%;
+  overflow: hidden;
+}
+
+.card-list-card3 {
+  width: 100%;
+  margin: 20px 3px 0px 3px;
+  border-radius: 3%;
   overflow: hidden;
 }
 
@@ -612,6 +617,13 @@ text-align: center;
   width: 60px;
   z-index: 0;
 }
+
+.logo2 {
+  margin: 2px 4px 4px 5px;
+  width: 25px;
+  z-index: 0;
+}
+
 
 .footer {
   display: flex;
@@ -651,12 +663,6 @@ text-align: center;
   margin-right: auto;
   width: 300px;
   overflow: hidden;
-}
-
-.card-list-pairs {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem; /* Add any gap you want between the cards */
 }
 
 .bigStaunch2 {
@@ -844,4 +850,26 @@ text-align: center;
   width: 100%;
   height: 100%;
   text-decoration: none;
+}
+
+.card-image-wrapper {
+  position: relative;
+  overflow: hidden;
+  height: 200px; /* Adjust this value as needed to control the card height */
+}
+
+.card-image-clip {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-top: -20%;
+  height: 50%; /* Adjust this value to show the desired portion of the image */
+  background-color: black; /* Adjust the background color if needed */
+}
+
+.card-image2 {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
