--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -117,10 +117,10 @@ text-align: center;
 }
 
 .blackfooter2 {
-  background: black;
-  height: 40%;
-  z-index: 1;
-  opacity: .80;
+  /* background: black; */
+  height: 100%;
+  z-index: 0;
+  /* opacity: .70; */
 }
 
 .left-h1{
@@ -137,8 +137,7 @@ text-align: center;
   text-align: left;
   margin: 5px;
 }
-
-.left-top-card {
+5.left-top-card {
   text-align: left;
   margin: 15px 5px 15px 17px;
 }
@@ -553,10 +552,9 @@ text-align: center;
 }
 
 .card-list2 {
-  display: flex;
-  flex-wrap: wrap;
-  margin: auto;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem; /* Add any gap you want between the cards */
 }
 
 .card-list3 {
@@ -585,6 +583,13 @@ text-align: center;
   overflow: hidden;
 }
 
+.card-list-card3 {
+  width: 100%;
+  margin: 20px 3px 0px 3px;
+  border-radius: 7px;
+  overflow: hidden;
+}
+
 .img-modal {
   width: 338px;
   border-radius: 17px;
@@ -610,8 +615,23 @@ text-align: center;
 .logo {
   margin: 2px 4px 4px 5px;
   width: 60px;
+  z-index: -1;
+}
+
+.logo2 {
+  margin: 2px 4px 4px 5px;
+  width: 25px;
+  height: 27px;
   z-index: 0;
 }
+
+.logo3 {
+  margin: 4px 4px 4px 5px;
+  width: 27px;
+  height: 25px;
+  z-index: 0;
+}
+
 
 .footer {
   display: flex;
@@ -651,12 +671,6 @@ text-align: center;
   margin-right: auto;
   width: 300px;
   overflow: hidden;
-}
-
-.card-list-pairs {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem; /* Add any gap you want between the cards */
 }
 
 .bigStaunch2 {
@@ -844,4 +858,41 @@ text-align: center;
   width: 100%;
   height: 100%;
   text-decoration: none;
+}
+
+.card-image-wrapper {
+  position: relative;
+  overflow: hidden;
+  height: 200px; /* Adjust this value as needed to control the card height */
+}
+
+.card-image-clip {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-top: -20%;
+  height: 50%; /* Adjust this value to show the desired portion of the image */
+  background-color: black; /* Adjust the background color if needed */
+}
+
+.card-image-clip2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-top: -25%;
+  height: 50%; /* Adjust this value to show the desired portion of the image */
+  background-color: black; /* Adjust the background color if needed */
+}
+
+.card-image2 {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  filter: brightness(20%);
+}
+
+.deck-list-background {
+  background-color: rgba(0, 0, 0, 0.7); /* Adjust the background color and opacity as desired */
 }
