--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -137,7 +137,7 @@ text-align: center;
   text-align: left;
   margin: 5px;
 }
-5.left-top-card {
+.left-top-card {
   text-align: left;
   margin: 15px 5px 15px 17px;
 }
